// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress > renders with animation carousel correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with animation carousel-inverse correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel-inverse_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-inverse-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with animation elastic correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary relative motion-safe:data-[state=indeterminate]:animate-[elastic_2s_var(--ease-in-out)_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with animation swing correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[swing_2s_var(--ease-in-out)_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with as correctly 1`] = `
"<section data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`Progress > renders with class correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 flex flex-col w-48">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with color neutral correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-inverted stroke-inverted motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-50%);"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with max correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed text-sm flex-row items-center justify-end min-w-fit transition-[width] duration-200 ease-out motion-reduce:transition-none" style="width: 50%;">50% </div>
  <div aria-valuemax="4" aria-valuemin="0" aria-valuenow="2" aria-label="50%" role="progressbar" data-state="loading" data-value="2" data-max="4" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="loading" data-value="2" data-max="4" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-50%);"></div>
  </div>
  <div data-slot="steps" class="grid items-end text-primary text-sm">
    <div data-slot="step" class="truncate text-end row-start-1 col-start-1 transition-opacity ease-out opacity-0">Waiting...</div>
    <div data-slot="step" class="truncate text-end row-start-1 col-start-1 transition-opacity ease-out opacity-0">Cloning...</div>
    <div data-slot="step" class="truncate text-end row-start-1 col-start-1 transition-opacity ease-out opacity-100">Migrating...</div>
    <div data-slot="step" class="truncate text-end row-start-1 col-start-1 transition-opacity ease-out opacity-0">Deploying...</div>
    <div data-slot="step" class="truncate text-end row-start-1 col-start-1 transition-opacity ease-out opacity-0">Done!</div>
  </div>
</div>"
`;

exports[`Progress > renders with max inverted correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed text-sm items-center justify-end min-w-fit transition-[width] duration-200 ease-out motion-reduce:transition-none self-end flex-row-reverse" style="width: 50%;">50% </div>
  <div aria-valuemax="4" aria-valuemin="0" aria-valuenow="2" aria-label="50%" role="progressbar" data-state="loading" data-value="2" data-max="4" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="loading" data-value="2" data-max="4" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(50%);"></div>
  </div>
  <div data-slot="steps" class="grid items-end text-primary text-sm">
    <div data-slot="step" class="truncate row-start-1 col-start-1 transition-opacity ease-out opacity-0 text-start">Waiting...</div>
    <div data-slot="step" class="truncate row-start-1 col-start-1 transition-opacity ease-out opacity-0 text-start">Cloning...</div>
    <div data-slot="step" class="truncate row-start-1 col-start-1 transition-opacity ease-out opacity-100 text-start">Migrating...</div>
    <div data-slot="step" class="truncate row-start-1 col-start-1 transition-opacity ease-out opacity-0 text-start">Deploying...</div>
    <div data-slot="step" class="truncate row-start-1 col-start-1 transition-opacity ease-out opacity-0 text-start">Done!</div>
  </div>
</div>"
`;

exports[`Progress > renders with modelValue correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-50%);"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="gap-2 h-full flex flex-row-reverse">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative h-full overflow-hidden rounded-full bg-accented w-2" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel-vertical_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with size 2xl correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-5" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with size 2xs correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-px" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with size lg correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-3" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with size md correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with size sm correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-1" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with size xl correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-4" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with size xs correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-0.5" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with status correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed text-sm flex-row items-center justify-end min-w-fit transition-[width] duration-200 ease-out motion-reduce:transition-none" style="width: 50%;">50% </div>
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(-50%);"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with status inverted correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <div data-slot="status" class="flex text-dimmed text-sm items-center justify-end min-w-fit transition-[width] duration-200 ease-out motion-reduce:transition-none self-end flex-row-reverse" style="width: 50%;">50% </div>
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-label="50%" role="progressbar" data-state="loading" data-value="50" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="loading" data-value="50" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]" style="transform: translateX(50%);"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with status slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with ui correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full h-2 bg-default" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with variant circular correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-row items-center">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative [--ui-progress-thickness:8px] size-22" style="transform: translateZ(0);"><svg viewBox="0 0 100 100" data-slot="circle" class="block size-full">
      <circle cx="50" cy="50" data-slot="track" class="stroke-(--ui-bg-accented) fill-none [stroke-width:var(--ui-progress-thickness)] [r:calc(50px-var(--ui-progress-thickness)/2)]"></circle>
      <circle data-state="indeterminate" data-max="100" cx="50" cy="50" pathLength="100" data-slot="indicator" class="rounded-full size-full ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary fill-none origin-center -rotate-90 [stroke-width:var(--ui-progress-thickness)] [r:calc(50px-var(--ui-progress-thickness)/2)] transition-[stroke-dasharray,opacity] duration-700 data-[value='0']:opacity-0 data-[state=indeterminate]:transform-view data-[state=indeterminate]:origin-center data-[state=indeterminate]:[stroke-dasharray:75,100] data-[state=indeterminate]:animate-[circular-rotate_1.4s_linear_infinite] data-[state=indeterminate]:transition-none"></circle>
    </svg>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Progress > renders with variant linear correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="gap-2 w-full flex flex-col">
  <!--v-if-->
  <div aria-valuemax="100" aria-valuemin="0" role="progressbar" data-state="indeterminate" data-max="100" data-slot="base" class="relative w-full overflow-hidden rounded-full bg-accented h-2" style="transform: translateZ(0);">
    <div data-state="indeterminate" data-max="100" data-slot="indicator" class="rounded-full size-full transition-transform duration-200 ease-out [stroke-linecap:round] motion-reduce:transition-none motion-reduce:data-[state=indeterminate]:animate-pulse bg-primary stroke-primary motion-safe:data-[state=indeterminate]:animate-[carousel_2s_linear_infinite] motion-safe:data-[state=indeterminate]:rtl:animate-[carousel-rtl_2s_linear_infinite]"></div>
  </div>
  <!--v-if-->
</div>"
`;
